<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".HomeActivity" >

    <Button
        android:id="@+id/host_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/host" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/join" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/settings" />
</LinearLayout>